[package]
name = "terminal-font"
version = "0.0.1"
edition = "2021"
exclude = [".github"]

description = "Utilities for font color and style decoration in terminal."
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["ansi", "color", "cli", "escape", "terminal", "terminal-font"]

repository = "https://github.com/treeinfra/terminal-font"
license = "MIT"
authors = ["James Aprosail <aprosail@outlook.com>"]
