[package]
name = "terminal-font"
version = "0.2.0"
edition = "2021"
exclude = [".github"]

description = "Utilities for font color and style decoration in terminal."
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["ansi", "color", "cli", "escape", "terminal"]

repository = "https://github.com/treeinfra/terminal-font"
license = "MIT"
authors = ["James Aprosail <aprosail@outlook.com>"]
